gccida/g2/bitmap_operation
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/bitmap_operation/src/bitmap.c:975:63: error: must use 'enum' tag to refer to type 'bitmap_bits'
int  bitmap_operation( bitmap to, bitmap from1, bitmap from2, bitmap_bits operation) 
                                                              ^
                                                              enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/bitmap_operation/src/bitmap.c:1180:12: error: expected expression
*( _OWORD *)( object_base + 24) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/bitmap_operation/src/bitmap.c:1180:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( object_base + 24) = 0LL; 
   ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/bitmap_operation/src/obj/bitmap.o] Error 1
